add: fonts and new functionality of button;

--- a/src/views/button/button.html
+++ b/src/views/button/button.html
@@ -1,5 +1,7 @@
 <button class="js-button-dialog">
-  <img src="./image.png" class="js-button-image" />
+  <div class="js-button-image-wrapper">
+    <img src="./image.png" class="js-button-image" />
+  </div>
   <div class="js-button-text">
     <div class="js-button-header">Запросить трансляцию</div>
     <div class="js-button-info">
