--- a/src/views/button/button.css
+++ b/src/views/button/button.css
@@ -5,19 +5,32 @@
   right: 10%;
   bottom: 30px;
   margin: 0 -80px 0 0;
-  width: 280px;
-  height: 56px;
-
+  overflow: hidden;
   border: solid 1px #dddddd;
-  border-radius: 10px;
+  border-radius: 28px;
   display: flex;
-  justify-content: space-around;
+  width: 56px;
+  height: 56px;
   align-items: center;
+  transition: width 100ms linear;
+}
+
+.js-button-dialog:focus {
+  outline: 0;
 }
 
 .js-button-image {
   width: 40px;
   height: 40px;
+}
+.js-button-image-wrapper {
+  width: 42px;
+  height: 51px;
+  border-radius: 28px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .js-button-header {
   font-size: 16px;
@@ -29,6 +42,12 @@
 }
 .js-button-text {
   display: flex;
+  transition: opacity 1s ease-in;
+  opacity: 0;
+  height: 0;
+  overflow: hidden;
   flex-direction: column;
   width: 200px;
+  margin-right: 14px;
+  margin-left: 8px;
 }
