--- a/src/views/message/message.html
+++ b/src/views/message/message.html
@@ -2,13 +2,16 @@
   <div class="js-widget-overlay"></div>
   <div class="js-widget-window">
     <div class="js-widget-dialog">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat. <br /><br /><br /><br />Duis aute irure dolor in
-      reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-      pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-      qui officia deserunt mollit anim id est laborum.
+      <h2>Что такое eyezon?</h2>
+      Это инструмент для видео-трансляций нового поколения, напрямую соединяющий
+      вас с тем, кто может показать интересующий вас видео-обзор. <br />
+      <br /><br /><br />
+      <h2>Как он работает?</h2>
+      Используя искусственный интеллект, система анализирует все фото и короткие
+      видео в приложении и, сопоставляя эти результаты с поисковым запросом,
+      выдает в качестве результата только те изобажнеия, которые ему релевантны.
+      Остается отправить запрос и ждать, когда автор сможет прислать видео-ответ
+      на него.
     </div>
     <div class="js-widget-icons">
       <img src="./image.png" class="js-widget-image" />
