--- a/src/views/message/message.html
+++ b/src/views/message/message.html
@@ -5,23 +5,24 @@
       <h2>Что такое eyezon?</h2>
       Это инструмент для видео-трансляций нового поколения, напрямую соединяющий
       вас с тем, кто может показать интересующий вас видео-обзор. <br />
-      <br /><br /><br />
+      <br />
       <h2>Как он работает?</h2>
       Используя искусственный интеллект, система анализирует все фото и короткие
       видео в приложении и, сопоставляя эти результаты с поисковым запросом,
       выдает в качестве результата только те изобажнеия, которые ему релевантны.
       Остается отправить запрос и ждать, когда автор сможет прислать видео-ответ
       на него.
+      <div class="js-widget-lowrow">
+        <button class="js-widget-getstream">Запросить трансляцию</button>
+      </div>
     </div>
     <div class="js-widget-icons">
-      <img src="./image.png" class="js-widget-image" />
+      <img src="./Iphone_8.png" class="js-widget-image" />
+
       <div class="js-widget-download">
         <img src="./androidDownload.png" class="js-widget-android" />
         <img src="./iosDownload.png" class="js-widget-ios" />
       </div>
-    </div>
-    <div class="js-widget-lowrow">
-      <button class="js-widget-getstream">Запросить трансляцию</button>
     </div>
   </div>
 </div>
