--- a/src/views/message/message.html
+++ b/src/views/message/message.html
@@ -3,15 +3,22 @@
   <div class="js-widget-window">
     <div class="js-widget-dialog">
       <h2>Что такое eyezon?</h2>
-      Это инструмент для видео-трансляций нового поколения, напрямую соединяющий
-      вас с тем, кто может показать интересующий вас видео-обзор. <br />
+      <span>
+        Это инструмент для видео-трансляций нового поколения, напрямую
+        соединяющий вас с тем, кто может показать интересующий вас видео-обзор.
+      </span>
       <br />
+      <br />
+      <br />
+
       <h2>Как он работает?</h2>
-      Используя искусственный интеллект, система анализирует все фото и короткие
-      видео в приложении и, сопоставляя эти результаты с поисковым запросом,
-      выдает в качестве результата только те изобажнеия, которые ему релевантны.
-      Остается отправить запрос и ждать, когда автор сможет прислать видео-ответ
-      на него.
+      <span>
+        Используя искусственный интеллект, система анализирует все фото и
+        короткие видео в приложении и, сопоставляя эти результаты с поисковым
+        запросом, выдает в качестве результата только те изобажнеия, которые ему
+        релевантны. Остается отправить запрос и ждать, когда автор сможет
+        прислать видео-ответ на него.
+      </span>
       <div class="js-widget-lowrow">
         <button class="js-widget-getstream">Запросить трансляцию</button>
       </div>
