--- a/src/views/chatFirstScreen/chat.css
+++ b/src/views/chatFirstScreen/chat.css
@@ -12,8 +12,9 @@
 .js-chat-window {
   position: fixed;
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  justify-content: flex-start;
+  flex-direction: column;
+
   z-index: 10003;
   background: #fff;
 
@@ -21,8 +22,8 @@
 
   width: 462px;
   height: 473px;
-  padding: 20px 60px;
-  padding-top: 60px;
+  padding: 40px 40px;
+
   box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.25);
   border-radius: 6px;
 }
@@ -31,4 +32,29 @@
   width: 100%;
   display: flex;
   justify-content: center;
+}
+
+.js-chat-message-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  flex: 1;
+}
+.js-chat-message-placeholder {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  color: rgba(0, 0, 0, 0.5);
+  flex: 1;
+}
+.js-chat-message-placeholder:nth-child(1) {
+  margin-top: 80px;
+}
+.js-chat-empty {
+  margin-top: 60px;
+  width: 176px;
+  height: 72px;
 }
