--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -21,6 +21,28 @@
   font-style: normal;
 }
 @font-face {
+  font-family: "Montserrat";
+  src: local("Mont-Regular"),
+    url("https://witheyezon.com/eyezonsite/static/fonts/Montserrat-Regular.ttf");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: local("Mont-SemiBold"),
+    url("https://witheyezon.com/eyezonsite/static/fonts/Montserrat-SemiBold.ttf");
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Montserrat";
+  src: local("Mont-Bold"),
+    url("https://witheyezon.com/eyezonsite/static/fonts/Montserrat-Bold.ttf");
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
   font-family: "Caveat";
   src: local("Caveat-Bold"),
     url("https://witheyezon.com/eyezonsite/static/fonts/Caveat-Bold.ttf");
