--- a/src/views/global/style.css
+++ b/src/views/global/style.css
@@ -1,10 +1,10 @@
-#root {
+#eyezonRoot {
   position: absolute !important;
   top: -8px !important;
   left: -8px !important;
 }
 
-#root button {
+#eyezonRoot button {
   -webkit-appearance: none !important;
   -moz-appearance: none !important;
   appearance: none !important;
